# icontool

./: .gitignore  Cargo.toml  README.md  icontool.code-workspace
.github/workflows/: ci.yml
src/: cmdline.rs  compile.rs  constant.rs  decompile.rs  dmi.rs  error.rs  indexmap_helper.rs  main.rs  metadata.rs  parser.rs
tests/: yaml_round_trip.rs
tests/data/compile/: neck.dmi.yml  u33.dmi.yml
tests/data/decompile/: neck.dmi
