[package]
name = "icontool"
version = "0.1.2"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.8", features = ["cargo", "derive"] }
indexmap = { version = "2.2.6", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_yml = "0.0.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
