[package]
name = "icontool"
version = "0.1.5"
edition = "2021"
publish = false

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.9", features = ["cargo", "derive"] }
image = "0.25.1"
indexmap = { version = "2.2.6", features = ["serde"] }
lz4_flex = "0.11.3"
nom = "7.1.3"
num-integer = "0.1.46"
png = "0.17.13"
serde = { version = "1.0.204", features = ["derive"] }
serde_yml = "0.0.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
