[package]
name = "icontool"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
image = "0.25.5"
indexmap = { version = "2.7.0", features = ["serde"] }
lz4_flex = "0.11.3"
nom = "7.1.3"
num-integer = "0.1.46"
png = "0.17.16"
serde = { version = "1.0.217", features = ["derive"] }
serde_yml = "0.0.12"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
